<resources>
    <string name="app_name">Toll Wallet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="wallet">Wallet</string>
    <string name="saldo">Saldo</string>
    <string name="id_alat">ID Alat</string>
    <string name="tipe_mobil">Tipe Mobil</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="title_activity_login">Login</string>
</resources>
